--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title> Katya Tipps </title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
+    <body>
+        <h1>About Me</h1>
+        <p>Hello! My name is Katya Tipps, and I am a Biomedical Engineer at the University of Florida. I am interested in the application of medical devices within orthopedic treatment and recovery.</p> 
+        <img src="Tipps_Katya.png" height="256" width="230">
+    </body>
+</html>
