fixed projects email

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
     <footer>
         <p>&copy; 2025 Katya Tipps</p>
         <p>
-            <a href="malito:katyatipps@ufl.edu">Email</a> |
+            <a href="mailto:katyatipps@ufl.edu">Email</a> |
             <a href="https://github.com/KatyaTipps" target="_blank">GitHub</a> |
             <a href="https://linkedin.com/in/katya-tipps/" target="_blank">LinkedIn</a>
         </p>
