updated project page with image of car model

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,16 @@
         <!-- Projects Section -->
          <h2>Projects</h2>
         <ul>
-            <li><strong>Portfolio Website</strong> - Built using HTML, CSS, and JavaScript. Hosted on GitHub Pages.</li> 
+            <li><strong>Portfolio Website</strong> - Built using HTML, CSS, and JavaScript. Hosted on GitHub Pages.
+                <div class="Project-showcase">
+                    <img src="images/3D-Model of Car.png" 
+                         alt="3D-Model of Car"
+                         class="project-image">
+                    <p class="project-description">
+                        A 3D model of a car designed in OnShape using sketching and extrusion. 
+                    </p>
+                </div>
+            </li> 
         </ul>
 
         <!-- Experiences Section -->
