updated description of car model and changed formatting

--- a/projects.html
+++ b/projects.html
@@ -27,18 +27,23 @@
         <h1>Projects & Experiences</h1>
 
         <!-- Projects Section -->
-         <h2>Projects</h2>
+         <!--Project 1-->
+        <h2>Projects</h2>
         <ul>
             <li><strong>Portfolio Website</strong> - Built using HTML, CSS, and JavaScript. Hosted on GitHub Pages.
-                <div class="Project-showcase">
+            </li> 
+        <!--Project 2-->
+            <li>
+                <strong>3D Car Model</strong> - Designed in OnShape using sketching and extrustion.
+                <div class="project-showcase">
                     <img src="images/3D-Model of Car.png" 
                          alt="3D-Model of Car"
                          class="project-image">
                     <p class="project-description">
-                        A 3D model of a car designed in OnShape using sketching and extrusion. 
+                        This 3D model demonstrates proficiency with CAD tools and 3D design concepts, focusing on detailed geometry. 
                     </p>
                 </div>
-            </li> 
+            </li>
         </ul>
 
         <!-- Experiences Section -->
