resaved all edits

--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,8 @@
          <!--Project 1-->
         <h2>Projects</h2>
         <ul>
-            <li><strong>Portfolio Website</strong> - Built using HTML, CSS, and JavaScript. Hosted on GitHub Pages.
+            <li>
+                <strong>Portfolio Website</strong> - Built using HTML, CSS, and JavaScript. Hosted on GitHub Pages.
             </li> 
         <!--Project 2-->
             <li>
