retried fixing the error of the dark mode button being next to the title

--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
     <body>
         <!-- Navigation Header -->
         <header>
-            <nav>
-                <div class="nav-left">
-                    <span class="logo">Katya Tipps</span>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                <div class="nav-right">
-                    <button onclick="toggleMode()">🌗</button>
-                </div>
-            </nav>
-        </header>
+        <nav>
+            <div class="logo">Katya Tipps</div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <button onclick="toggleMode()" class="mode-toggle">🌗</button>
+        </nav>
+    </header>
         
         <main>
             <h1>About Me</h1>
+            <p><strong>Education:</strong>University of Florida</p>
             <p><strong>Major:</strong> Biomedical Engineering</p>
             <p><strong>Interests:</strong> I am interested in the application of medical devices within orthopedic treatment and recovery.</p>
             <img src="Tipps_Katya.png" alt="Profile" height="256" width="230" />
