--- a/projects.html
+++ b/projects.html
@@ -9,17 +9,13 @@
 <body>
     <header>
         <nav>
-            <div class="nav-left">
-                <span class="logo">Katya Tipps</span>
-            </div>
+            <div class="logo">Katya Tipps</div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="nav-right">
-                <button onclick="toggleMode()">🌗</button>
-            </div>
+            <button onclick="toggleMode()" class="mode-toggle">🌗</button>
         </nav>
     </header>
 
